@@ -7,17 +7,14 @@ return html renderer + psm
 """
 doc = context.getContent()
 
+do_notify = False
+
 layout_changed = context.editLayouts(REQUEST=REQUEST);
 
 if layout_changed or REQUEST.has_key('cpsdocument_edit_button'):
     request = REQUEST
     psm = 'psm_content_changed'
-    # XXX:
-    # Notification has to be done manually here until the workflow takes care of
-    # the "workflow_modify" transition.
-    context.portal_eventservice.notifyEvent('workflow_modify', context,
-                                            {'comments': REQUEST.get('comments')
-                                             })
+    do_notify = True
 else:
     request = None
     psm = ''
@@ -27,5 +24,14 @@ res = doc.renderEditDetailed(request=request, proxy=context,
 
 if not res[1]:
     psm = 'psm_content_error'
+    do_notify = False
+
+if do_notify:
+    # XXX:
+    # Notification has to be done manually here until the workflow takes care of
+    # the "workflow_modify" transition.
+    context.portal_eventservice.notifyEvent('workflow_modify', context,
+                                            {'comments': request.get('comments')
+                                             })
 
 return res[0], psm
